Update form button text fields to be nullable and adjust related components for internationalization
- Changed `submit_button_text` and `re_fill_button_text` fields in `UserFormRequest` to be nullable.
- Updated `NotionCompleteForm.vue`, `NotionForm.vue`, and `FormSubmissionSettings.vue` to handle nullable button text with fallback translations.
- Modified `initForm.js` to initialize button text as null.
- Added button translations in multiple languages for submit, next, previous, and re-fill actions.
- Created migration to update database schema for button text fields to be nullable.

--- a/client/i18n/lang/en.json
+++ b/client/i18n/lang/en.json
@@ -3,6 +3,12 @@
         "name": "OpnForm"
     },
     "forms": {
+        "buttons": {
+            "submit": "Submit",
+            "next": "Next",
+            "previous": "Previous",
+            "re_fill": "Submit another response"
+        },
         "powered_by": "Powered by",
         "password_protected": "This form is protected by a password.",
         "invalid_password": "Invalid password.",
