--- a/client/i18n/lang/tr.json
+++ b/client/i18n/lang/tr.json
@@ -3,6 +3,12 @@
         "name": "OpnForm"
     },
     "forms": {
+        "buttons": {
+            "submit": "Gönder",
+            "next": "Sonraki",
+            "previous": "Önceki",
+            "re_fill": "Başka bir yanıt gönder"
+        },
         "powered_by": "Tarafından desteklenmektedir",
         "password_protected": "Bu form şifre korumalıdır.",
         "invalid_password": "Geçersiz şifre.",
@@ -47,18 +53,18 @@
             "billing_email": "Fatura e-posta adresi",
             "payment_disclaimer": "Bu düğmeye tıkladığınızda kredi kartınızdan ücret alınacaktır. Ödemeler Stripe aracılığıyla güvenli bir şekilde işlenir.",
             "errors": {
-                "missingFormOrProvider": "Missing form slug or provider ID.",
-                "failedAccountDetails": "Failed to get Stripe account details.",
-                "setupError": "An error occurred during Stripe setup.",
-                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
-                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
-                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
-                "paymentRequired": "Complete the payment before you can proceed.",
-                "nameRequired": "Card holder name is required.",
-                "emailRequired": "Billing email address is required.",
-                "invalidEmail": "Invalid billing email address.",
-                "failedIntent": "Failed to create payment intent.",
-                "processingFailed": "Payment processing failed."
+                "missingFormOrProvider": "Form slug'ı veya sağlayıcı kimliği eksik.",
+                "failedAccountDetails": "Stripe hesap detayları alınamadı.",
+                "setupError": "Stripe kurulumu sırasında bir hata oluştu.",
+                "systemNotReady": "Ödeme sistemi hazır değil. Lütfen bir süre bekleyip tekrar deneyin.",
+                "misconfigured": "Ödeme sistemi yanlış yapılandırılmış. Lütfen yenileyip tekrar deneyin.",
+                "notFullyReady": "Ödeme sistemi tam olarak hazır değil. Lütfen yenileyip tekrar deneyin.",
+                "paymentRequired": "Devam etmeden önce ödemeyi tamamlayın.",
+                "nameRequired": "Kart sahibinin adı gerekli.",
+                "emailRequired": "Fatura e-posta adresi gerekli.",
+                "invalidEmail": "Geçersiz fatura e-posta adresi.",
+                "failedIntent": "Ödeme amacı oluşturulamadı.",
+                "processingFailed": "Ödeme işlemi başarısız oldu."
             }
         }
     }
