--- a/client/i18n/lang/pl.json
+++ b/client/i18n/lang/pl.json
@@ -3,6 +3,12 @@
         "name": "OpnForm"
     },
     "forms": {
+        "buttons": {
+            "submit": "Wyślij",
+            "next": "Dalej",
+            "previous": "Poprzedni",
+            "re_fill": "Wyślij kolejną odpowiedź"
+        },
         "powered_by": "Obsługiwane przez",
         "password_protected": "Ten formularz jest chroniony hasłem.",
         "invalid_password": "Nieprawidłowe hasło.",
@@ -47,18 +53,18 @@
             "billing_email": "Adres e-mail do faktury",
             "payment_disclaimer": "Twoja karta kredytowa zostanie obciążona po kliknięciu tego przycisku. Płatności są bezpiecznie przetwarzane przez Stripe.",
             "errors": {
-                "missingFormOrProvider": "Missing form slug or provider ID.",
-                "failedAccountDetails": "Failed to get Stripe account details.",
-                "setupError": "An error occurred during Stripe setup.",
-                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
-                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
-                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
-                "paymentRequired": "Complete the payment before you can proceed.",
-                "nameRequired": "Card holder name is required.",
-                "emailRequired": "Billing email address is required.",
-                "invalidEmail": "Invalid billing email address.",
-                "failedIntent": "Failed to create payment intent.",
-                "processingFailed": "Payment processing failed."
+                "missingFormOrProvider": "Brak slugu formularza lub identyfikatora dostawcy.",
+                "failedAccountDetails": "Nie udało się pobrać szczegółów konta Stripe.",
+                "setupError": "Wystąpił błąd podczas konfiguracji Stripe.",
+                "systemNotReady": "System płatności nie jest gotowy. Proszę chwilę poczekać i spróbować ponownie.",
+                "misconfigured": "System płatności jest nieprawidłowo skonfigurowany. Proszę odświeżyć i spróbować ponownie.",
+                "notFullyReady": "System płatności nie jest w pełni gotowy. Proszę odświeżyć i spróbować ponownie.",
+                "paymentRequired": "Dokończ płatność, zanim będziesz mógł kontynuować.",
+                "nameRequired": "Wymagane jest imię i nazwisko posiadacza karty.",
+                "emailRequired": "Wymagany jest adres e-mail do faktury.",
+                "invalidEmail": "Nieprawidłowy adres e-mail do faktury.",
+                "failedIntent": "Nie udało się utworzyć zamiaru płatności.",
+                "processingFailed": "Przetwarzanie płatności nie powiodło się."
             }
         }
     }
