--- a/client/i18n/lang/pt.json
+++ b/client/i18n/lang/pt.json
@@ -3,6 +3,12 @@
         "name": "OpnForm"
     },
     "forms": {
+        "buttons": {
+            "submit": "Enviar",
+            "next": "Próximo",
+            "previous": "Anterior",
+            "re_fill": "Enviar outra resposta"
+        },
         "powered_by": "Desenvolvido por",
         "password_protected": "Este formulário está protegido por senha.",
         "invalid_password": "Senha inválida.",
@@ -47,18 +53,18 @@
             "billing_email": "Endereço de e-mail para faturação",
             "payment_disclaimer": "Seu cartão de crédito será cobrado ao clicar neste botão. Os pagamentos são processados ​​com segurança através do Stripe.",
             "errors": {
-                "missingFormOrProvider": "Missing form slug or provider ID.",
-                "failedAccountDetails": "Failed to get Stripe account details.",
-                "setupError": "An error occurred during Stripe setup.",
-                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
-                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
-                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
-                "paymentRequired": "Complete the payment before you can proceed.",
-                "nameRequired": "Card holder name is required.",
-                "emailRequired": "Billing email address is required.",
-                "invalidEmail": "Invalid billing email address.",
-                "failedIntent": "Failed to create payment intent.",
-                "processingFailed": "Payment processing failed."
+                "missingFormOrProvider": "Slug do formulário ou ID do provedor ausente.",
+                "failedAccountDetails": "Falha ao obter os detalhes da conta Stripe.",
+                "setupError": "Ocorreu um erro durante a configuração do Stripe.",
+                "systemNotReady": "O sistema de pagamento não está pronto. Aguarde um momento e tente novamente.",
+                "misconfigured": "Sistema de pagamento mal configurado. Atualize e tente novamente.",
+                "notFullyReady": "O sistema de pagamento não está totalmente pronto. Atualize e tente novamente.",
+                "paymentRequired": "Conclua o pagamento antes de prosseguir.",
+                "nameRequired": "O nome do titular do cartão é obrigatório.",
+                "emailRequired": "O endereço de e-mail para faturação é obrigatório.",
+                "invalidEmail": "Endereço de e-mail para faturação inválido.",
+                "failedIntent": "Falha ao criar a intenção de pagamento.",
+                "processingFailed": "O processamento do pagamento falhou."
             }
         }
     }
